--- a/pom.xml
+++ b/pom.xml
@@ -35,9 +35,9 @@
     <codingstyle.version>0.3.0</codingstyle.version>
     <analysis-model-api.version>7.0.2</analysis-model-api.version>
     <analysis-model.version>7.0.2</analysis-model.version>
-    <forensics-api-plugin.version>0.6.2-rc264.1e3082f9c320</forensics-api-plugin.version>
+    <forensics-api-plugin.version>0.6.2-SNAPSHOT</forensics-api-plugin.version>
     <git-forensics-plugin.version>0.6.0</git-forensics-plugin.version>
-    <plugin-util-api.version>0.1.0-beta1-rc10.5177988a84e6</plugin-util-api.version>
+    <plugin-util-api.version>0.1.0-beta1-SNAPSHOT</plugin-util-api.version>
 
     <font-awesome-api.version>5.11.2-1-beta1-rc47.a93da8514fdd</font-awesome-api.version>
     <jquery3-api.version>3.4.1-1-beta2-rc53.c40ba34317aa</jquery3-api.version>
