--- a/pom.xml
+++ b/pom.xml
@@ -33,18 +33,18 @@
     <module.name>${project.groupId}.warnings.ng</module.name>
 
     <codingstyle.version>0.3.0</codingstyle.version>
-    <analysis-model-api.version>7.0.2</analysis-model-api.version>
-    <analysis-model.version>7.0.2</analysis-model.version>
-    <forensics-api-plugin.version>0.6.2-SNAPSHOT</forensics-api-plugin.version>
-    <git-forensics-plugin.version>0.6.0</git-forensics-plugin.version>
-    <plugin-util-api.version>0.1.0-beta1-SNAPSHOT</plugin-util-api.version>
+    <analysis-model-api.version>8.0.0-beta1</analysis-model-api.version>
+    <analysis-model.version>8.0.0-beta1</analysis-model.version>
+    <forensics-api-plugin.version>0.7.0-beta1</forensics-api-plugin.version>
+    <git-forensics-plugin.version> 0.7.0-beta1</git-forensics-plugin.version>
+    <plugin-util-api.version>0.1.0-beta1</plugin-util-api.version>
 
-    <font-awesome-api.version>5.11.2-1-beta1-rc47.a93da8514fdd</font-awesome-api.version>
-    <jquery3-api.version>3.4.1-1-beta2-rc53.c40ba34317aa</jquery3-api.version>
-    <popper-api.version>1.15.0-1-beta2-rc50.5cd401532679</popper-api.version>
-    <bootstrap4-api.version>4.1.3-1-beta3-rc53.60aeeb03da2a</bootstrap4-api.version>
-    <data-tables-api.version>1.10.20-1-beta4-rc72.fab652dc6fb9</data-tables-api.version>
-    <echarts-api.version>4.4.0-1-beta2-rc63.9b9f1e39b982</echarts-api.version>
+    <font-awesome-api.version>5.11.2-2-beta2</font-awesome-api.version>
+    <jquery3-api.version>3.4.1-2-beta1</jquery3-api.version>
+    <popper-api.version>1.15.0-2-beta1</popper-api.version>
+    <bootstrap4-api.version>4.4.1-1-beta1</bootstrap4-api.version>
+    <data-tables-api.version>1.10.20-2-beta1</data-tables-api.version>
+    <echarts-api.version>4.4.0-2-beta1</echarts-api.version>
 
     <spotbugs.annotations>3.1.12</spotbugs.annotations>
     <commons.lang.version>3.9</commons.lang.version>
