--- a/pom.xml
+++ b/pom.xml
@@ -76,18 +76,18 @@
     <jenkins-maven-plugin.version>3.1.2</jenkins-maven-plugin.version>
     <matrix-project.version>1.13</matrix-project.version>
     <junit-plugin.version>1.24</junit-plugin.version>
-    <git-plugin.version>3.9.1</git-plugin.version>
+    <git-plugin.version>4.0.0</git-plugin.version>
     <workflow-api.version>2.34</workflow-api.version>
     <workflow-cps.version>2.67</workflow-cps.version>
-    <workflow-step.version>2.19</workflow-step.version>
+    <workflow-step-api.version>2.20</workflow-step-api.version>
     <workflow-job.version>2.32</workflow-job.version>
-    <structs.version>1.19</structs.version>
+    <structs.version>1.20</structs.version>
     <antisamy-markup-formatter.version>1.5</antisamy-markup-formatter.version>
     <dashboard-view.version>2.9.4</dashboard-view.version>
     <script-security.version>1.58</script-security.version>
     <folder-plugin.version>6.1.2</folder-plugin.version>
-    <credentials.version>2.1.14</credentials.version>
-    <httpcomponents-client.version>4.5.3-2.1</httpcomponents-client.version>
+    <credentials.version>2.3.0</credentials.version>
+    <httpcomponents-client.version>4.5.10-1.0</httpcomponents-client.version>
 
     <!-- Maven plug-in versions -->
     <maven-pmd-plugin.version>3.12.0</maven-pmd-plugin.version>
@@ -143,7 +143,7 @@
       <dependency>
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>credentials</artifactId>
-        <version>2.1.16</version>
+        <version>2.3.0</version>
       </dependency>
       <dependency>
         <groupId>com.google.code.gson</groupId>
@@ -163,17 +163,17 @@
       <dependency>
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>mailer</artifactId>
-        <version>1.20</version>
+        <version>1.23</version>
       </dependency>
       <dependency>
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>scm-api</artifactId>
-        <version>2.2.7</version>
+        <version>2.6.3</version>
       </dependency>
       <dependency>
         <groupId>org.jenkins-ci.plugins.workflow</groupId>
         <artifactId>workflow-scm-step</artifactId>
-        <version>2.6</version>
+        <version>2.9</version>
       </dependency>
       <dependency>
         <groupId>commons-net</groupId>
@@ -188,7 +188,7 @@
       <dependency>
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>ssh-credentials</artifactId>
-        <version>1.13</version>
+        <version>1.17.2</version>
       </dependency>
       <dependency>
         <groupId>org.slf4j</groupId>
@@ -199,6 +199,11 @@
         <groupId>org.hamcrest</groupId>
         <artifactId>hamcrest-core</artifactId>
         <version>2.2</version>
+      </dependency>
+      <dependency>
+        <groupId>org.jenkins-ci.plugins</groupId>
+        <artifactId>jsch</artifactId>
+        <version>0.1.55.1</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -350,7 +355,7 @@
     <dependency>
       <groupId>org.jenkins-ci.plugins.workflow</groupId>
       <artifactId>workflow-step-api</artifactId>
-      <version>${workflow-step.version}</version>
+      <version>${workflow-step-api.version}</version>
     </dependency>
     <dependency>
       <groupId>org.jenkins-ci.plugins.workflow</groupId>
