--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
     <codingstyle.version>0.3.0</codingstyle.version>
     <analysis-model-api.version>8.0.0-beta1</analysis-model-api.version>
     <analysis-model.version>8.0.0-beta1</analysis-model.version>
-    <forensics-api-plugin.version>0.7.0-beta2</forensics-api-plugin.version>
+    <forensics-api-plugin.version>0.7.0-beta3-SNAPSHOT</forensics-api-plugin.version>
     <git-forensics-plugin.version> 0.7.0-beta1</git-forensics-plugin.version>
     <plugin-util-api.version>0.1.0-beta2</plugin-util-api.version>
 
@@ -959,7 +959,7 @@
             <plugin>
               <groupId>com.h3xstream.findsecbugs</groupId>
               <artifactId>findsecbugs-plugin</artifactId>
-              <version>1.10.1</version>
+              <version>${findsecbugs-plugin.version}</version>
             </plugin>
           </plugins>
         </configuration>
