--- a/pom.xml
+++ b/pom.xml
@@ -35,16 +35,16 @@
     <codingstyle.version>0.3.1</codingstyle.version>
     <analysis-model-api.version>8.0.0-beta1</analysis-model-api.version>
     <analysis-model.version>8.0.0-beta1</analysis-model.version>
-    <forensics-api-plugin.version>0.7.0-beta3-SNAPSHOT</forensics-api-plugin.version>
-    <git-forensics-plugin.version> 0.7.0-beta1</git-forensics-plugin.version>
-    <plugin-util-api.version>0.1.0-beta2</plugin-util-api.version>
+    <forensics-api-plugin.version>0.7.0-beta3</forensics-api-plugin.version>
+    <git-forensics-plugin.version>0.7.0-beta2</git-forensics-plugin.version>
+    <plugin-util-api.version>0.1.0-beta3</plugin-util-api.version>
 
     <font-awesome-api.version>5.11.2-2-beta2</font-awesome-api.version>
     <jquery3-api.version>3.4.1-3-beta1</jquery3-api.version>
     <popper-api.version>1.15.0-2-beta1</popper-api.version>
     <bootstrap4-api.version>4.4.1-2-beta1</bootstrap4-api.version>
     <data-tables-api.version>1.10.20-4-beta1</data-tables-api.version>
-    <echarts-api.version>4.4.0-4-beta1</echarts-api.version>
+    <echarts-api.version>4.4.0-5-beta1</echarts-api.version>
 
     <spotbugs.annotations>3.1.12</spotbugs.annotations>
     <commons.lang.version>3.9</commons.lang.version>
@@ -226,11 +226,6 @@
   <dependencies>
 
     <!-- Project Library Dependencies -->
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-nop</artifactId>
-      <version>${slf4j.version}</version>
-    </dependency>
     <dependency>
       <groupId>com.github.spotbugs</groupId>
       <artifactId>spotbugs-annotations</artifactId>
