--- a/pom.xml
+++ b/pom.xml
@@ -37,14 +37,14 @@
     <analysis-model.version>8.0.0-beta2</analysis-model.version>
     <forensics-api-plugin.version>0.7.0-beta3</forensics-api-plugin.version>
     <git-forensics-plugin.version>0.7.0-beta2</git-forensics-plugin.version>
-    <plugin-util-api.version>0.1.0-beta3</plugin-util-api.version>
+    <plugin-util-api.version>0.1.0-beta4-SNAPSHOT</plugin-util-api.version>
 
     <font-awesome-api.version>5.11.2-2-beta2</font-awesome-api.version>
     <jquery3-api.version>3.4.1-3-beta1</jquery3-api.version>
     <popper-api.version>1.15.0-2-beta1</popper-api.version>
     <bootstrap4-api.version>4.4.1-3-beta1</bootstrap4-api.version>
     <data-tables-api.version>1.10.20-4-beta1</data-tables-api.version>
-    <echarts-api.version>4.4.0-6-beta1</echarts-api.version>
+    <echarts-api.version>4.4.0-7-beta1-SNAPSHOT</echarts-api.version>
 
     <spotbugs.annotations>3.1.12</spotbugs.annotations>
     <commons.lang.version>3.9</commons.lang.version>
