--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,11 @@
         <version>${git-client.version}</version>
       </dependency>
       <dependency>
+        <groupId>org.jenkins-ci.plugins</groupId>
+        <artifactId>git-plugin</artifactId>
+        <version>${git-client.version}</version>
+      </dependency>
+      <dependency>
         <groupId>commons-digester</groupId>
         <artifactId>commons-digester</artifactId>
         <version>${commons.digester.version}</version>
