--- a/pom.xml
+++ b/pom.xml
@@ -116,8 +116,8 @@
       </dependency>
       <dependency>
         <groupId>org.jenkins-ci.plugins</groupId>
-        <artifactId>git-plugin</artifactId>
-        <version>${git-client.version}</version>
+        <artifactId>git</artifactId>
+        <version>${git-plugin.version}</version>
       </dependency>
       <dependency>
         <groupId>commons-digester</groupId>
