--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.jvnet.hudson.plugins</groupId>
     <artifactId>analysis-pom</artifactId>
-    <version>2.1.1</version>
+    <version>2.1.2</version>
     <relativePath />
   </parent>
 
@@ -26,11 +26,15 @@
 
     <module.name>${project.groupId}.warnings.ng</module.name>
 
-    <analysis-model-api.version>8.0.0-beta7</analysis-model-api.version>
-    <analysis-model-tests.version>8.0.0-beta7</analysis-model-tests.version>
+    <assertj.version>3.14.0</assertj.version>
+
+    <analysis-model-api.version>8.0.0-beta8-rc224.3223ce968690</analysis-model-api.version>
+    <analysis-model-tests.version>8.0.0-beta8-rc3326.e99681ab820f</analysis-model-tests.version>
     <forensics-api-plugin.version>0.7.0-beta6</forensics-api-plugin.version>
-    <git-forensics-plugin.version>0.7.0-beta4</git-forensics-plugin.version>
+    <git-forensics-plugin.version>0.7.0-beta5-rc362.2d7d94678955</git-forensics-plugin.version>
     <plugin-util-api.version>0.1.0-beta6</plugin-util-api.version>
+
+    <codingstyle.library.version>0.3.3</codingstyle.library.version>
 
     <font-awesome-api.version>5.12.0-2-beta1</font-awesome-api.version>
     <jquery3-api.version>3.4.1-4-beta1</jquery3-api.version>
@@ -145,6 +149,11 @@
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>jsch</artifactId>
         <version>0.1.55.1</version>
+      </dependency>
+      <dependency>
+        <groupId>edu.hm.hafner</groupId>
+        <artifactId>codingstyle</artifactId>
+        <version>${codingstyle.library.version}</version>
       </dependency>
 
     </dependencies>
