--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,11 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
+        <groupId>com.github.spotbugs</groupId>
+        <artifactId>spotbugs-annotations</artifactId>
+        <version>4.0.0</version>
+      </dependency>
+      <dependency>
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>git-client</artifactId>
         <version>${git-client.version}</version>
