Sync release-drafter.yml and settings.yml.

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -4,12 +4,17 @@ name-template: Warnings NG Plugin $NEXT_PATCH_VERSION 🎁
 template: |
   $CHANGES
 
+# Emoji reference: https://gitmoji.carloscuesta.me/
 categories:
-  - title: 🚨 Removed
+  - title: 💥 Removed
     label: removed
   - title: ⚠️ Deprecated
     label: deprecated
-  - title: 🚀 New features and improvements
+  - title: 🚀 New features
+    labels:
+      - enhancement
+      - feature
+  - title: ✨ Improvements
     labels:
       - enhancement
       - feature
