--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.jvnet.hudson.plugins</groupId>
     <artifactId>analysis-pom</artifactId>
-    <version>2.2.0</version>
+    <version>2.2.1</version>
     <relativePath />
   </parent>
 
@@ -26,18 +26,18 @@
 
     <module.name>${project.groupId}.warnings.ng</module.name>
 
-    <analysis-model-api.version>8.0.0-beta12</analysis-model-api.version>
-    <analysis-model-tests.version>8.0.0-beta12</analysis-model-tests.version>
-    <forensics-api-plugin.version>0.7.0-beta7</forensics-api-plugin.version>
-    <git-forensics-plugin.version>0.7.0-beta5-rc370.4d4cc497227a</git-forensics-plugin.version>
-    <plugin-util-api.version>0.1.0-beta9</plugin-util-api.version>
+    <analysis-model-api.version>8.0.0-beta17</analysis-model-api.version>
+    <analysis-model-tests.version>8.0.0-beta17</analysis-model-tests.version>
+    <forensics-api-plugin.version>0.7.0-beta8</forensics-api-plugin.version>
+    <git-forensics-plugin.version>0.7.0-beta6</git-forensics-plugin.version>
+    <plugin-util-api.version>0.1.0-beta10</plugin-util-api.version>
     <codingstyle.library.version>1.0.0</codingstyle.library.version>
 
-    <font-awesome-api.version>5.12.0-4-beta1</font-awesome-api.version>
-    <jquery3-api.version>3.4.1-6-beta1</jquery3-api.version>
-    <bootstrap4-api.version>4.4.1-7-beta1</bootstrap4-api.version>
-    <data-tables-api.version>1.10.20-9-beta1</data-tables-api.version>
-    <echarts-api.version>4.6.0-3-beta1</echarts-api.version>
+    <font-awesome-api.version>5.12.0-5-beta1</font-awesome-api.version>
+    <jquery3-api.version>3.4.1-7-beta1</jquery3-api.version>
+    <bootstrap4-api.version>4.4.1-8-beta1</bootstrap4-api.version>
+    <data-tables-api.version>1.10.20-10-beta1</data-tables-api.version>
+    <echarts-api.version>4.6.0-5-beta1</echarts-api.version>
 
     <commons.lang.version>3.9</commons.lang.version>
     <commons.io.version>2.6</commons.io.version>
