--- a/pom.xml
+++ b/pom.xml
@@ -21,15 +21,15 @@
   <url>https://github.com/jenkinsci/warnings-ng-plugin</url>
 
   <properties>
-    <revision>8.0.0-beta9</revision>
+    <revision>8.0.0</revision>
     <changelist>-SNAPSHOT</changelist>
 
     <module.name>${project.groupId}.warnings.ng</module.name>
 
-    <analysis-model-api.version>8.0.0-beta21</analysis-model-api.version>
-    <analysis-model-tests.version>8.0.0-beta20</analysis-model-tests.version>
-    <forensics-api-plugin.version>0.7.0-beta8</forensics-api-plugin.version>
-    <git-forensics-plugin.version>0.7.0-beta6</git-forensics-plugin.version>
+    <analysis-model-api.version>8.0.0</analysis-model-api.version>
+    <analysis-model-tests.version>8.0.0</analysis-model-tests.version>
+    <forensics-api-plugin.version>0.7.0</forensics-api-plugin.version>
+    <git-forensics-plugin.version>0.7.0</git-forensics-plugin.version>
     <plugin-util-api.version>1.0.1</plugin-util-api.version>
 
     <font-awesome-api.version>5.12.0-7</font-awesome-api.version>
