--- a/pom.xml
+++ b/pom.xml
@@ -566,6 +566,7 @@
           <excludes combine.children="append">
             <exclude>.*Thresholds</exclude>
           </excludes>
+          <quiet>true</quiet>
           <entryPointClassPackage>io.jenkins.plugins.analysis.core.assertions</entryPointClassPackage>
         </configuration>
       </plugin>
